--- a/index.html
+++ b/index.html
@@ -15,15 +15,6 @@
       href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
       rel="stylesheet"
     />
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <div class="card">
@@ -55,17 +46,24 @@
       <div class="payment">
         <a href="#" class="process-payment">Proceed to Payment</a>
       </div>
+
+      <div class="cancel-order">
+        <a href="#">Cancel Order</a>
+      </div>
     </div>
-    <!--  
-    -->
 
     <div class="attribution">
-      Challenge by
-      <a
-        href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj"
-        target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/Nikuze">Diop Nikuze</a>.
+      <span
+        >Challenge by
+        <a
+          href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj"
+          target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/Nikuze/Order-summary-card" target="_blank"
+          >Diop Nikuze</a
+        >.
+      </span>
     </div>
   </body>
 </html>
